<resources>
    <string name="app_name">Copa America 2019</string>
    <string name="title_tabla_groups">Tabla de Grupos</string>
    <!--Strings for button navbar-->
    <string name="title_match">Encuentros</string>
    <string name="title_groups">Grupos</string>
    <string name="title_teams">Equipos</string>
    <!--Strings for tabLayout-->
    <string name="btn1tabLayout">Fase de Grupos</string>
    <string name="btn2tabLayout">Play Offs</string>
    <!--Strings for navigation drawer-->
    <string name="menu_qr">Buscar jugador por código QR</string>
    <string name="menu_settings">Ajustes</string>
    <string name="menu_help">Información</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <!--String for item_list-->
    <string name="item_date">DD/MM/AA</string>
    <string name="item_score">6:45AM</string>
    <string name="item_group">Grupo X</string>
    <string name="team_one">Equipo uno</string>
    <string name="team_two">Equipo 2</string>
    <string name="conten_description_team1">Equipo 1</string>
    <string name="conten_description_team2">Equipo 2</string>
    <string name="item_score_eliminatorias">(?-?)</string>
    <string name="num_llave">Llave #</string>
    <!--String for name of teams-->
    <string name="team_argentina">Argentina</string>
    <string name="team_bolivia">Bolivia</string>
    <string name="team_brasil">Brasil</string>
    <string name="team_chile">Chile</string>
    <string name="team_colombia">Colombia</string>
    <string name="team_ecuador">Ecuador</string>
    <string name="team_japan">Japón</string>
    <string name="team_katar">Catar</string>
    <string name="team_paraguay">Paraguay</string>
    <string name="team_peru">Perú</string>
    <string name="team_uruguay">Uruguay</string>
    <string name="team_venezuela">Venezuela</string>
    <string name="ninguno">Por definirse</string>
    <!--Strings for play of phase-->
    <string name="group_quarter">Cuartos de Final</string>
    <string name="group_semis">Semifinal</string>
    <string name="group_third">Tercer Lugar</string>
    <string name="group_final">Final</string>
    <string name="urlWebService">http://192.168.0.42/copaAmerica/</string>
    <!--Strings for table of groups-->
    <string name="group_a">Grupo A</string>
    <string name="group_b">Grupo B</string>
    <string name="group_c">Grupo C</string>
    <string name="club">Club</string>
    <string name="pts">Pts</string>
    <string name="pj">PJ</string>
    <string name="dg">DG</string>
    <string name="first">1</string>
    <string name="second">2</string>
    <string name="third">3</string>
    <string name="fourth">4</string>
    <string name="numberZero">0</string>
    <!--Strings for match info-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--Strings menu save-->
    <string name="save">Guardar</string>
    <string name="add_new">Si</string>
    <string name="title_activity_qr">QRActivity</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
</resources>
