<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_team1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/colombia"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="15"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="10">

            <TextView
                android:id="@+id/text_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/item_date"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/text_score"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/item_score"
                android:textSize="28sp"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:id="@+id/text_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/item_group"
                android:textSize="10sp"
                android:textColor="@color/colorBlack"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/image_team2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/argentina"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="15"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorSecondary"
        android:layout_marginTop="11dp" />
</LinearLayout>